Fix layout issue

--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -58,6 +58,10 @@
 
 }
 
+.site-logo {
+	@include pxrem(margin-top, 14px);
+}
+
 .header-item {
 	@extend .container;
 }
